--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Future markdown editor for web and desktop application development",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "jest",
+    "build": "NODE_ENV=production webpack --config scripts/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,34 @@
   "homepage": "https://github.com/marktext/muya#readme",
   "dependencies": {
     "ot-json0": "^1.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/preset-env": "^7.2.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "jest": "^23.6.0",
+    "mini-css-extract-plugin": "^0.4.5",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.4.0",
+    "style-loader": "^0.23.1",
+    "svg-sprite-loader": "^4.1.3",
+    "svgo": "^1.1.1",
+    "svgo-loader": "^2.2.0",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.27.0",
+    "webpack-cli": "^3.1.2"
   }
 }
