--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,27 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "targets": {
-        "browsers": [
-          "last 2 Chrome major versions",
-          "last 2 Firefox major versions",
-          "last 2 Safari major versions",
-          "last 2 Edge major versions",
-          "last 2 iOS major versions",
-          "last 2 ChromeAndroid major versions"
-        ]
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": [
+            "last 2 Chrome major versions",
+            "last 2 Firefox major versions",
+            "last 2 Safari major versions",
+            "last 2 Edge major versions",
+            "last 2 iOS major versions",
+            "last 2 ChromeAndroid major versions"
+          ]
+        }
       }
-    }]
+    ]
   ],
   "plugins": [
-    ["@babel/plugin-proposal-class-properties", { "loose": true }]
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ]
   ]
 }
