--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Future markdown editor for web and desktop application development",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack-dev-server --open",
     "test": "jest --env=jsdom",
-    "build": "NODE_ENV=production webpack --config scripts/webpack.config.js"
+    "build": "NODE_ENV=production webpack --config scripts/webpack.config.js",
+    "lint:fix": "eslint --fix"
   },
   "repository": {
     "type": "git",
@@ -24,39 +26,41 @@
   },
   "homepage": "https://github.com/marktext/muya#readme",
   "dependencies": {
-    "katex": "^0.10.0",
-    "ot-json0": "^1.1.0",
+    "katex": "^0.11.1",
+    "ot-json1": "^0.2.4",
     "snabbdom": "^0.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/preset-env": "^7.2.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^26.0.1",
     "babel-loader": "^8.0.4",
-    "cross-env": "^5.2.0",
-    "css-loader": "^1.0.1",
-    "eslint": "^5.9.0",
-    "eslint-config-standard": "^12.0.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.5.3",
+    "eslint": "^7.1.0",
+    "eslint-config-standard": "^14.1.1",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-html": "^5.0.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-html": "^6.0.2",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "jest": "^23.6.0",
-    "mini-css-extract-plugin": "^0.4.5",
+    "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.0.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.4.0",
-    "style-loader": "^0.23.1",
-    "svg-sprite-loader": "^4.1.3",
+    "style-loader": "^1.2.1",
+    "svg-sprite-loader": "^5.0.0",
     "svgo": "^1.1.1",
     "svgo-loader": "^2.2.0",
-    "url-loader": "^1.1.2",
+    "url-loader": "^4.1.0",
     "webpack": "^4.27.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.11.0"
   }
 }
