--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --config ./example/webpack.config.js --open",
+    "build": "NODE_ENV=production webpack --config scripts/webpack.config.js",
     "test": "jest --env=jsdom",
-    "build": "NODE_ENV=production webpack --config scripts/webpack.config.js"
+    "lint:fix": "eslint --fix lib"
   },
   "repository": {
     "type": "git",
