--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "dompurify": "^2.0.11",
+    "fast-diff": "^1.2.0",
     "katex": "^0.11.1",
     "ot-json1": "^0.2.4",
     "snabbdom": "^0.7.3"
