--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "dompurify": "^2.0.11",
+    "element-resize-detector": "^1.2.1",
     "fast-diff": "^1.2.0",
     "fuzzaldrin": "^2.1.0",
     "katex": "^0.11.1",
     "ot-json1": "^0.2.4",
+    "popper.js": "^1.16.1",
     "snabbdom": "^0.7.3",
     "snabbdom-to-html": "^6.0.0"
   },
