--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "ot-json1": "^0.2.4",
     "popper.js": "^1.16.1",
     "snabbdom": "^0.7.3",
-    "snabbdom-to-html": "^6.0.0"
+    "snabbdom-to-html": "^6.0.0",
+    "unsplash-js": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
@@ -72,8 +73,8 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
     "svg-sprite-loader": "^5.0.0",
-    "svgo": "^1.1.1",
-    "svgo-loader": "^2.2.0",
+    "svgo": "^1.3.2",
+    "svgo-loader": "^2.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.27.0",
     "webpack-cli": "^3.1.2",
