--- a/package.json
+++ b/package.json
@@ -32,43 +32,43 @@
     "fast-diff": "^1.2.0",
     "fuzzaldrin": "^2.1.0",
     "katex": "^0.11.1",
-    "ot-json1": "^0.2.4",
+    "ot-json1": "0.2.4",
     "popper.js": "^1.16.1",
-    "snabbdom": "^0.7.3",
+    "snabbdom": "^1.0.1",
     "snabbdom-to-html": "^6.0.0",
     "unsplash-js": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
+    "@babel/core": "^7.10.3",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-env": "^7.10.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^26.0.1",
+    "babel-jest": "^26.1.0",
     "babel-loader": "^8.0.4",
-    "commitlint": "^8.3.5",
+    "commitlint": "^9.0.1",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.5.3",
-    "eslint": "^7.1.0",
+    "css-loader": "^3.6.0",
+    "eslint": "^7.3.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-html": "^6.0.2",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.2.9",
+    "jest": "^26.1.0",
+    "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.4.0",
     "style-loader": "^1.2.1",
-    "stylelint": "^13.6.0",
-    "stylelint-config-prettier": "^8.0.1",
+    "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
@@ -77,7 +77,7 @@
     "svgo-loader": "^2.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.27.0",
-    "webpack-cli": "^3.1.2",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
 }
