--- a/.babelrc
+++ b/.babelrc
@@ -17,6 +17,8 @@
     ]
   ],
   "plugins": [
+    "@babel/plugin-syntax-optional-chaining",
+    "@babel/plugin-proposal-nullish-coalescing-operator",
     [
       "@babel/plugin-proposal-class-properties",
       {
