--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "dompurify": "^2.0.11",
     "element-resize-detector": "^1.2.1",
     "fast-diff": "^1.2.0",
+    "file-icons-js": "^1.0.3",
     "fuzzaldrin": "^2.1.0",
     "katex": "^0.11.1",
     "ot-json1": "0.2.4",
     "popper.js": "^1.16.1",
+    "prismjs": "^1.20.0",
     "snabbdom": "^1.0.1",
     "snabbdom-to-html": "^6.0.0",
     "unsplash-js": "^6.0.0"
@@ -41,6 +43,8 @@
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.1",
+    "@babel/plugin-syntax-optional-chaining": "^7.8.3",
     "@babel/preset-env": "^7.10.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
