--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fast-diff": "^1.2.0",
     "file-icons-js": "^1.0.3",
     "fuzzaldrin": "^2.1.0",
+    "html-tags": "^3.1.0",
     "katex": "^0.11.1",
     "ot-json1": "0.2.4",
     "popper.js": "^1.16.1",
