--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-tags": "^3.1.0",
     "katex": "^0.12.0",
     "ot-json1": "1.0.0",
+    "ot-text-unicode": "^4.0.0",
     "popper.js": "^1.16.1",
     "prismjs": "^1.20.0",
     "snabbdom": "^1.0.1",
