--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "file-icons-js": "^1.0.3",
     "fuzzaldrin": "^2.1.0",
     "html-tags": "^3.1.0",
+    "joplin-turndown-plugin-gfm": "^1.0.12",
     "katex": "^0.12.0",
     "ot-json1": "1.0.0",
     "ot-text-unicode": "^4.0.0",
@@ -41,6 +42,7 @@
     "prismjs": "^1.20.0",
     "snabbdom": "^1.0.1",
     "snabbdom-to-html": "^6.0.0",
+    "turndown": "^6.0.0",
     "unsplash-js": "^6.0.0"
   },
   "devDependencies": {
