--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "commitlint": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
+    "dotenv-webpack": "^6.0.0",
     "eslint": "^7.15.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-friendly-formatter": "^4.0.1",
