--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Future markdown editor for web and desktop application development",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./example/webpack.config.js --open",
+    "dev": "webpack serve --config ./example/webpack.config.js --open",
     "build": "NODE_ENV=production webpack --config ./scripts/webpack.config.js",
     "test": "jest --env=jsdom",
-    "lint:fix": "eslint --fix lib"
+    "lint:fix": "eslint --fix lib",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "repository": {
     "type": "git",
@@ -43,51 +46,52 @@
     "snabbdom": "^2.1.0",
     "snabbdom-to-html": "^6.0.0",
     "turndown": "^7.0.0",
-    "unsplash-js": "^7.0.2"
+    "unsplash-js": "^7.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
+    "@babel/core": "^7.12.16",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
     "@babel/plugin-syntax-optional-chaining": "^7.8.3",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-env": "^7.12.16",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "commitlint": "^11.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.0.1",
+    "css-loader": "^5.0.2",
     "dotenv-webpack": "^6.0.0",
-    "eslint": "^7.18.0",
+    "eslint": "^7.20.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-html": "^6.1.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.1",
-    "husky": "^4.3.8",
+    "html-webpack-plugin": "^5.1.0",
+    "husky": "5",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.3",
-    "mini-css-extract-plugin": "^1.3.4",
-    "postcss-loader": "^4.1.0",
+    "lint-staged": "^10.5.4",
+    "mini-css-extract-plugin": "^1.3.7",
+    "pinst": "^2.1.4",
+    "postcss-loader": "^5.0.0",
     "postcss-preset-env": "^6.4.0",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.8.0",
+    "stylelint": "^13.10.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
     "svg-sprite-loader": "^5.2.1",
-    "svgo": "^1.3.2",
+    "svgo": "^2.0.0",
     "svgo-loader": "^2.2.1",
     "url-loader": "^4.1.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.22.0",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
