--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "fuzzaldrin": "^2.1.0",
     "html-tags": "^3.1.0",
     "joplin-turndown-plugin-gfm": "^1.0.12",
-    "katex": "^0.13.0",
+    "katex": "0.13.0",
     "ot-json1": "1.0.1",
     "ot-text-unicode": "^4.0.0",
     "popper.js": "^1.16.1",
@@ -46,10 +46,10 @@
     "snabbdom": "^3.0.1",
     "snabbdom-to-html": "^6.0.0",
     "turndown": "^7.0.0",
-    "unsplash-js": "^7.0.8"
+    "unsplash-js": "^7.0.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.13",
+    "@babel/core": "^7.13.14",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
     "@babel/plugin-syntax-optional-chaining": "^7.8.3",
@@ -58,7 +58,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "commitlint": "^12.0.1",
+    "commitlint": "^12.1.1",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.0",
     "dotenv-webpack": "^7.0.2",
@@ -90,7 +90,7 @@
     "svgo": "^2.3.0",
     "svgo-loader": "^3.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.28.0",
+    "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   }
