--- a/.babelrc
+++ b/.babelrc
@@ -19,6 +19,7 @@
   "plugins": [
     "@babel/plugin-syntax-optional-chaining",
     "@babel/plugin-proposal-nullish-coalescing-operator",
+    ["@babel/plugin-proposal-private-methods", { "loose": true }],
     [
       "@babel/plugin-proposal-class-properties",
       {
