--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "html-tags": "^3.1.0",
     "joplin-turndown-plugin-gfm": "^1.0.12",
     "katex": "0.13.0",
-    "ot-json1": "1.0.2",
+    "ot-json1": "^1.0.2",
     "ot-text-unicode": "^4.0.0",
     "popper.js": "^1.16.1",
     "prismjs": "^1.23.0",
@@ -49,36 +49,36 @@
     "unsplash-js": "^7.0.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
+    "@babel/core": "^7.14.3",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.2",
     "@babel/plugin-syntax-optional-chaining": "^7.8.3",
-    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-env": "^7.14.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.0.1",
     "babel-loader": "^8.2.2",
-    "commitlint": "^12.1.1",
+    "commitlint": "^12.1.4",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.4",
+    "css-loader": "^5.2.6",
     "dotenv-webpack": "^7.0.2",
-    "eslint": "^7.26.0",
-    "eslint-config-standard": "^16.0.2",
+    "eslint": "^7.27.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-html": "^6.1.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "husky": "6.0.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
+    "jest": "^27.0.1",
+    "lint-staged": "^11.0.0",
     "mini-css-extract-plugin": "^1.6.0",
     "pinst": "^2.1.6",
-    "postcss-loader": "^5.2.0",
+    "postcss-loader": "^5.3.0",
     "postcss-preset-env": "^6.4.0",
     "style-loader": "^2.0.0",
     "stylelint": "^13.13.1",
@@ -90,7 +90,7 @@
     "svgo": "^2.3.0",
     "svgo-loader": "^3.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.37.0",
+    "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
   }
