--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "execall": "^3.0.0",
     "fast-diff": "^1.2.0",
     "file-icons-js": "^1.1.0",
-    "fuzzaldrin": "^2.1.0",
+    "fuzzaldrin-plus": "^0.6.0",
     "html-tags": "^3.1.0",
     "joplin-turndown-plugin-gfm": "^1.0.12",
     "katex": "0.13.0",
