build: update dependences

--- a/package.json
+++ b/package.json
@@ -29,41 +29,39 @@
   },
   "homepage": "https://github.com/marktext/muya#readme",
   "dependencies": {
-    "add": "^2.0.6",
-    "axios": "^0.21.1",
-    "dompurify": "^2.2.8",
-    "element-resize-detector": "^1.2.2",
+    "axios": "^0.24.0",
+    "dompurify": "^2.3.4",
+    "element-resize-detector": "^1.2.4",
     "execall": "^3.0.0",
     "fast-diff": "^1.2.0",
     "file-icons-js": "^1.1.0",
-    "fuse.js": "^6.4.6",
+    "fuse.js": "^6.5.3",
     "html-tags": "^3.1.0",
     "joplin-turndown-plugin-gfm": "^1.0.12",
-    "katex": "0.13.0",
+    "katex": "0.15.1",
     "ot-json1": "^1.0.2",
     "ot-text-unicode": "^4.0.0",
     "popper.js": "^1.16.1",
-    "prismjs": "^1.23.0",
-    "snabbdom": "^3.0.1",
-    "snabbdom-to-html": "^6.0.0",
-    "turndown": "^7.0.0",
-    "unsplash-js": "^7.0.11",
-    "yarn": "^1.22.10"
+    "prismjs": "^1.25.0",
+    "snabbdom": "^3.2.0",
+    "snabbdom-to-html": "^7.0.0",
+    "turndown": "^7.1.1",
+    "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.2",
+    "@babel/core": "^7.16.5",
+    "@babel/plugin-proposal-class-properties": "^7.16.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.5",
     "@babel/plugin-syntax-optional-chaining": "^7.8.3",
-    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-env": "^7.16.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^27.0.2",
-    "babel-loader": "^8.2.2",
+    "babel-jest": "^27.4.5",
+    "babel-loader": "^8.2.3",
     "commitlint": "^12.1.4",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
-    "dotenv-webpack": "^7.0.2",
+    "dotenv-webpack": "^7.0.3",
     "eslint": "^7.27.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-friendly-formatter": "^4.0.1",
