--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [12.x, 14.x, 17.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -24,11 +24,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Install pnpm
-      run: npm install -g pnpm
+    - name: Install yarn
+      run: npm install -g yarn
     - name: Install dependencies
-      run: pnpm install --frozen-lockfile
+      run: yarn install --frozen-lockfile
     - name: test
-      run: pnpm test
+      run: yarn test
     - name: build
-      run: pnpm build
+      run: yarn build
