--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://github.com/marktext/muya#readme",
   "dependencies": {
     "@marktext/file-icons": "^1.0.4",
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
     "dompurify": "^2.3.4",
     "element-resize-detector": "^1.2.4",
     "execall": "^3.0.0",
@@ -49,12 +49,12 @@
     "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
+    "@babel/core": "7.16.7",
+    "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-proposal-class-properties": "^7.16.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.5",
     "@babel/plugin-syntax-optional-chaining": "^7.8.3",
-    "@babel/preset-env": "^7.16.5",
-    "babel-core": "^7.0.0-bridge.0",
+    "@babel/preset-env": "7.16.8",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
@@ -62,15 +62,14 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "dotenv-webpack": "^7.0.3",
-    "eslint": "^7.27.0",
+    "eslint": "^8.7.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "husky": "7.0.4",
@@ -78,14 +77,15 @@
     "lint-staged": "^12.1.7",
     "mini-css-extract-plugin": "^2.5.1",
     "pinst": "^2.1.6",
-    "postcss-loader": "^5.3.0",
-    "postcss-preset-env": "^6.4.0",
-    "style-loader": "^2.0.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.2.3",
+    "style-loader": "^3.3.1",
+    "stylelint": "^14.2.0",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-order": "^4.1.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-order": "^5.0.0",
     "svg-sprite-loader": "^6.0.7",
     "svgo": "^2.3.0",
     "svgo-loader": "^3.0.0",
