--- a/package.json
+++ b/package.json
@@ -31,22 +31,31 @@
   "dependencies": {
     "@marktext/file-icons": "^1.0.4",
     "axios": "^0.25.0",
+    "browserify-zlib": "^0.2.0",
     "dompurify": "^2.3.4",
     "element-resize-detector": "^1.2.4",
     "execall": "^3.0.0",
     "fast-diff": "^1.2.0",
+    "flowchart.js": "^1.17.0",
     "fuse.js": "^6.5.3",
     "html-tags": "^3.1.0",
     "joplin-turndown-plugin-gfm": "^1.0.12",
     "katex": "0.15.2",
+    "mermaid": "8.8.4",
     "ot-json1": "^1.0.2",
     "ot-text-unicode": "^4.0.0",
     "popper.js": "^1.16.1",
     "prismjs": "^1.25.0",
     "snabbdom": "^3.2.0",
     "snabbdom-to-html": "^7.0.0",
+    "snapsvg-cjs": "^0.0.6",
     "turndown": "^7.1.1",
-    "unsplash-js": "^7.0.15"
+    "underscore": "^1.13.2",
+    "unsplash-js": "^7.0.15",
+    "vega": "^5.17.3",
+    "vega-embed": "^6.14.2",
+    "vega-lite": "^5.2.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@babel/core": "7.16.10",
@@ -73,9 +82,11 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "husky": "7.0.4",
+    "imports-loader": "^3.1.1",
     "jest": "^27.0.3",
     "lint-staged": "^12.2.2",
     "mini-css-extract-plugin": "^2.5.1",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "pinst": "^2.1.6",
     "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
@@ -90,7 +101,7 @@
     "svgo": "^2.3.0",
     "svgo-loader": "^3.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.38.1",
+    "webpack": "^5.67.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.7.3"
   }
