--- a/.babelrc
+++ b/.babelrc
@@ -19,9 +19,20 @@
   "plugins": [
     "@babel/plugin-syntax-optional-chaining",
     "@babel/plugin-proposal-nullish-coalescing-operator",
-    ["@babel/plugin-proposal-private-methods", { "loose": true }],
+    [
+      "@babel/plugin-proposal-private-methods",
+      {
+        "loose": true
+      }
+    ],
     [
       "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ],
+    [
+      "@babel/plugin-proposal-private-property-in-object",
       {
         "loose": true
       }
