--- a/package.json
+++ b/package.json
@@ -31,28 +31,28 @@
   "homepage": "https://github.com/marktext/muya#readme",
   "dependencies": {
     "@marktext/file-icons": "^1.0.4",
-    "axios": "^0.26.1",
+    "axios": "^1.4.0",
     "browserify-zlib": "^0.2.0",
-    "dompurify": "^2.3.6",
+    "dompurify": "^3.0.3",
     "element-resize-detector": "^1.2.4",
     "execall": "^3.0.0",
-    "fast-diff": "^1.2.0",
+    "fast-diff": "^1.3.0",
     "flowchart.js": "^1.17.1",
-    "fuse.js": "^6.5.3",
-    "html-tags": "^3.1.0",
+    "fuse.js": "^6.6.2",
+    "html-tags": "^3.3.1",
     "joplin-turndown-plugin-gfm": "^1.0.12",
     "katex": "0.15.3",
     "mermaid": "8.14.0",
     "ot-json1": "^1.0.2",
     "ot-text-unicode": "^4.0.0",
     "popper.js": "^1.16.1",
-    "prismjs": "^1.27.0",
-    "snabbdom": "^3.4.0",
-    "snabbdom-to-html": "^7.0.0",
+    "prismjs": "^1.29.0",
+    "snabbdom": "^3.5.1",
+    "snabbdom-to-html": "^7.1.0",
     "snapsvg-cjs": "^0.0.6",
-    "turndown": "^7.1.1",
-    "underscore": "^1.13.2",
-    "unsplash-js": "^7.0.15",
+    "turndown": "^7.1.2",
+    "underscore": "^1.13.6",
+    "unsplash-js": "^7.0.18",
     "vega": "^5.22.0",
     "vega-embed": "^6.20.8",
     "vega-lite": "^5.2.0",
@@ -61,6 +61,7 @@
   "devDependencies": {
     "@babel/core": "7.17.8",
     "@babel/eslint-parser": "^7.17.0",
+    "@babel/helper-string-parser": "^7.21.5",
     "@babel/plugin-proposal-class-properties": "^7.16.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.5",
     "@babel/plugin-syntax-optional-chaining": "^7.8.3",
@@ -70,18 +71,18 @@
     "babel-loader": "^8.2.3",
     "commitlint": "^16.2.3",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.8.1",
     "dotenv-webpack": "^7.1.0",
-    "eslint": "^8.11.0",
+    "eslint": "^8.42.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-html": "^6.1.2",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
+    "html-webpack-plugin": "^5.5.1",
     "husky": "7.0.4",
     "imports-loader": "^3.1.1",
     "jest": "^27.5.1",
@@ -89,20 +90,20 @@
     "mini-css-extract-plugin": "^2.6.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "pinst": "^3.0.0",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.24",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.3",
-    "style-loader": "^3.3.1",
+    "style-loader": "^3.3.3",
     "stylelint": "^14.6.0",
-    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-order": "^5.0.0",
     "svg-sprite-loader": "^6.0.7",
     "svgo": "^2.3.0",
     "svgo-loader": "^3.0.0",
-    "webpack": "^5.70.0",
+    "webpack": "^5.85.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.15.0"
   }
 }
