--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@marktext/muya",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "Future markdown editor for web and desktop application development",
-  "main": "index.js",
+  "main": "dist/muya.js",
+  "module": "lib/index.js",
   "scripts": {
     "dev": "webpack serve --config ./example/webpack.config.js --open",
     "build": "NODE_ENV=production webpack --config ./scripts/webpack.config.js",
@@ -11,7 +12,8 @@
     "lint:fix": "eslint --fix lib",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable"
+    "postpublish": "pinst --enable",
+    "pub": "npm publish --access public"
   },
   "repository": {
     "type": "git",
