--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest --env=jsdom",
     "lint": "eslint lib",
     "lint:fix": "eslint --fix lib",
-    "_postinstall": "husky install",
+    "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable",
     "pub": "npm publish --access public"
