--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@marktext/muya",
-  "version": "0.0.12",
+  "version": "0.0.14",
   "description": "Future markdown editor for web and desktop application development",
   "main": "dist/muya.js",
   "module": "lib/index.js",
@@ -10,7 +10,7 @@
     "test": "jest --env=jsdom",
     "lint": "eslint lib",
     "lint:fix": "eslint --fix lib",
-    "postinstall": "husky install",
+    "_postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable",
     "pub": "npm publish --access public"
