--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@marktext/muya",
-  "version": "0.0.32",
+  "version": "0.0.40",
   "description": "Future markdown editor for web and desktop application development",
-  "main": "dist/muya.js",
-  "module": "lib/index.js",
+  "main": "built/index.js",
+  "module": "built/index.js",
   "scripts": {
     "dev": "webpack serve --config ./example/webpack.config.js --open",
-    "build": "NODE_ENV=production webpack --config ./scripts/webpack.config.js",
+    "build": "tsc",
+    "copyfiles": "copyfiles -u 1 lib/**/*.css built && copyfiles -u 1 lib/**/*.json built && copyfiles -u 1 lib/**/*.png built && copyfiles -u 1 lib/**/*.svg built && copyfiles -u 1 lib/**/*.ttf built && copyfiles -u 1 lib/**/*.woff built && copyfiles -u 1 lib/**/*.woff2 built",
     "test": "jest --env=jsdom",
     "lint": "eslint lib",
     "lint:fix": "eslint --fix lib",
@@ -23,7 +24,7 @@
     "markdown",
     "editor",
     "web",
-    "destop"
+    "desktop"
   ],
   "author": "ransixi@gmail.com",
   "license": "MIT",
@@ -72,6 +73,7 @@
     "babel-jest": "^29.6.1",
     "babel-loader": "^9.1.3",
     "commitlint": "^17.6.6",
+    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "dotenv-webpack": "^8.0.1",
@@ -95,6 +97,7 @@
     "postcss": "^8.4.25",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.0.0",
+    "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.3",
     "stylelint": "^15.10.1",
     "stylelint-config-prettier": "^9.0.5",
@@ -104,6 +107,7 @@
     "svg-sprite-loader": "^6.0.7",
     "svgo": "^3.0.2",
     "svgo-loader": "^4.0.0",
+    "ts-loader": "^9.4.4",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
