--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "fast-diff": "^1.3.0",
     "flowchart.js": "^1.17.1",
     "fuse.js": "^6.6.2",
+    "github-markdown-css": "^5.2.0",
     "html-tags": "^3.3.1",
     "joplin-turndown-plugin-gfm": "^1.0.12",
     "katex": "0.16.8",
