--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "postcss": "^8.4.27",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.0.0",
+    "raw-loader": "^4.0.2",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.3",
     "stylelint": "^15.10.2",
