--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "fast-diff": "^1.3.0",
     "flowchart.js": "^1.17.1",
     "fuse.js": "^6.6.2",
+    "github-markdown-css": "^5.2.0",
     "html-tags": "^3.3.1",
     "joplin-turndown-plugin-gfm": "^1.0.12",
     "katex": "0.16.8",
@@ -97,6 +98,7 @@
     "postcss": "^8.4.27",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.0.0",
+    "raw-loader": "^4.0.2",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.3",
     "stylelint": "^15.10.2",
