--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "module": "ES2022",
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "moduleResolution": "Node",
