--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "outDir": "./built",
     "allowJs": true,
     "checkJs": false,
-    "target": "ES2016",
+    "target": "es2017",
     "paths": {
       "@/*": ["./lib/*"],
       "@types/*": ["./types/*"]
