refactor: turn all JS files into TS files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
     "declaration": true,
     "baseUrl": ".",
     "outDir": "./built",
-    "allowJs": true,
-    "checkJs": false,
+    "allowJs": false,
     "target": "es2017",
     "paths": {
       "@muya/*": ["./lib/*"],
