refactor: use Generator to generate unique id

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "outDir": "./built",
     "allowJs": false,
     "target": "es2017",
+    // "noImplicitAny": true,
+    // "strictNullChecks": true,
     "paths": {
       "@muya/*": ["./lib/*"],
       "@types/*": ["./types/*"]
