--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@babel/preset-env": "7.22.15",
     "@types/d3": "^7.4.0",
     "@types/dompurify": "^3.0.2",
+    "@types/prismjs": "^1.26.0",
     "@types/vfile-message": "^2.0.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^29.7.0",
