--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   "homepage": "https://github.com/marktext/muya#readme",
   "dependencies": {
     "@marktext/file-icons": "^1.0.4",
-    "axios": "^1.5.0",
     "dompurify": "^3.0.5",
     "element-resize-detector": "^1.2.4",
     "execall": "^3.0.0",
@@ -59,11 +58,11 @@
     "unsplash-js": "^7.0.18",
     "vega": "^5.25.0",
     "vega-embed": "^6.22.2",
-    "vega-lite": "^5.14.1",
+    "vega-lite": "^5.15.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@babel/core": "7.22.17",
+    "@babel/core": "7.22.19",
     "@babel/eslint-parser": "^7.22.15",
     "@babel/helper-string-parser": "^7.22.5",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -88,6 +87,7 @@
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-webpack-plugin": "^4.0.1",
