refactor: use eslint to lint TS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,16 @@
 {
   "compilerOptions": {
-    "module": "ES2022",
-    "lib": ["DOM", "ES2015"],
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "moduleResolution": "Node",
+    "target": "es2020",
+    "sourceMap": true,
     "declaration": true,
+    "module": "ES2020",
+    "moduleResolution": "Node",
+    "lib": ["DOM", "ES2015"],
+    "resolveJsonModule": true,
     "baseUrl": ".",
-    "outDir": "./built",
-    "target": "es2017",
-    "noEmitOnError": true,
+    "noEmit": true,
     "noFallthroughCasesInSwitch": true,
-    // "noUnusedParameters": true,
-    // "noUnusedLocals": true,
-    // "noImplicitAny": true,
-    // "strictNullChecks": true,
     "strict": true,
     "paths": {
       "@muya/*": ["./lib/*"],
