--- a/.babelrc
+++ b/.babelrc
@@ -1,29 +1,6 @@
 {
   "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "browsers": [
-            "last 2 Chrome major versions",
-            "last 2 Firefox major versions",
-            "last 2 Safari major versions",
-            "last 2 Edge major versions",
-            "last 2 iOS major versions",
-            "last 2 ChromeAndroid major versions"
-          ]
-        }
-      }
-    ]
-  ],
-  "plugins": [
-    "@babel/plugin-syntax-optional-chaining",
-    "@babel/plugin-proposal-nullish-coalescing-operator",
-    [
-      "@babel/plugin-proposal-class-properties",
-      {
-        "loose": true
-      }
-    ]
+    "@babel/preset-env",
+    "@babel/preset-typescript"
   ]
 }
