--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "@marktext/muya",
   "version": "0.1.13",
   "description": "Future markdown editor for web and desktop application development",
-  "main": "built/index.js",
-  "module": "built/index.js",
+  "main": "dist/muya.js",
   "scripts": {
     "dev": "webpack serve --config ./example/webpack.config.js --open",
-    "build": "tsc",
-    "copyfiles": "copyfiles -u 1 lib/**/*.css built && copyfiles -u 1 lib/**/*.json built && copyfiles -u 1 lib/**/*.png built && copyfiles -u 1 lib/**/*.svg built && copyfiles -u 1 lib/**/*.ttf built && copyfiles -u 1 lib/**/*.woff built && copyfiles -u 1 lib/**/*.woff2 built",
+    "build": "npm run lint:tsc && webpack --config scripts/webpack.config.js",
     "test": "jest --env=jsdom",
-    "lint": "eslint lib",
+    "lint": "npm run lint:eslint && npm run lint:tsc",
+    "lint:eslint": "eslint lib",
+    "lint:tsc": "tsc --noEmit --skipLibCheck",
     "lint:fix": "eslint --fix lib",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
@@ -63,34 +63,23 @@
   },
   "devDependencies": {
     "@babel/core": "7.22.19",
-    "@babel/eslint-parser": "^7.22.15",
     "@babel/helper-string-parser": "^7.22.5",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-syntax-optional-chaining": "^7.8.3",
     "@babel/preset-env": "7.22.15",
+    "@babel/preset-typescript": "^7.22.15",
     "@types/d3": "^7.4.0",
     "@types/dompurify": "^3.0.2",
     "@types/prismjs": "^1.26.0",
     "@types/vfile-message": "^2.0.0",
-    "babel-eslint": "^10.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "browserify-zlib": "^0.2.0",
     "commitlint": "^17.7.1",
-    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.49.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.1.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-webpack-plugin": "^4.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "husky": "8.0.3",
@@ -111,10 +100,7 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-order": "^6.0.3",
-    "svg-sprite-loader": "^6.0.7",
-    "svgo": "^3.0.2",
-    "svgo-loader": "^4.0.0",
-    "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
