opti: use plantuml-encoder to encode planuml

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mermaid": "10.4.0",
     "ot-json1": "^1.0.2",
     "ot-text-unicode": "^4.0.0",
+    "plantuml-encoder": "^1.4.0",
     "popper.js": "^1.16.1",
     "prismjs": "^1.29.0",
     "snabbdom": "^3.5.1",
@@ -66,6 +67,7 @@
     "@laynezh/vite-plugin-lib-assets": "0.5.2",
     "@types/dompurify": "^3.0.2",
     "@types/katex": "^0.16.3",
+    "@types/plantuml-encoder": "^1.4.0",
     "@types/prismjs": "^1.26.0",
     "@types/turndown": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
