refactor: remove forked marked

--- a/package.json
+++ b/package.json
@@ -40,13 +40,12 @@
     "fast-diff": "^1.3.0",
     "flowchart.js": "^1.17.1",
     "fuse.js": "^6.6.2",
-    "github-markdown-css": "^5.2.0",
     "html-tags": "^3.3.1",
     "intl-segmenter-polyfill": "^0.4.4",
     "joplin-turndown-plugin-gfm": "^1.0.12",
     "katex": "0.16.8",
     "marked": "^9.0.3",
-    "marked-katex-extension": "^3.0.6",
+    "marked-highlight": "^2.0.6",
     "mermaid": "10.4.0",
     "ot-json1": "^1.0.2",
     "ot-text-unicode": "^4.0.0",
