build: update package.json

--- a/examples/package.json
+++ b/examples/package.json
@@ -1,6 +1,7 @@
 {
   "name": "muya-examples",
   "version": "0.0.1",
+  "private": true,
   "description": "Muya vanilla ts demo project",
   "author": "jocs <ransixi@gmail.com>",
   "scripts": {
